# terminal-bridgebuilder

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  rust-clippy.yml
levels/: 0.0-Tutorial.json
src/: level.rs  main.rs  object.rs  scene.rs
src/engine/: mod.rs  unittest.rs
src/savefile/: mod.rs  unittest.rs
src/stop_token/: mod.rs  unittest.rs
src/ui/: icon_button.rs  main_menu.rs  mod.rs  scene_view.rs  terminal_manager.rs  world_menu.rs  world_view.rs
src/ui/components/: focus_scope.rs  icon_button.rs  list_menu.rs  mod.rs  mouse_area.rs  popup.rs  unittest.rs
src/ui/event_handling/: key_handler.rs  mod.rs  mouse_area.rs
src/ui/focus_scope/: mod.rs  unittest.rs
src/ui/mouse_area/: mod.rs  unittest.rs
src/ui/popup/: mod.rs
