[package]
name = "terminal_bridgebuilder"
authors = ["Menno van der Graaf <mennovandergraaf@hotmail.com>"]
license = "MIT"
description = "A bridge building game for terminals"
readme = "README.md"
homepage = "https://github.com/Mercotui/terminal_bridgebuilder"
repository = "https://github.com/Mercotui/terminal_bridgebuilder"
keywords = ["terminal", "game", "bridgebuilder"]
categories = ["games"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.9.0"
clap-verbosity-flag = "2.0.0"
tui = "0.19"
crossterm = "0.25"
json = "0.12.4"