[package]
name = "terminal-bridgebuilder"
authors = ["Menno van der Graaf <mennovandergraaf@hotmail.com>"]
license = "MIT"
description = "A bridge building game for terminals"
readme = "README.md"
homepage = "https://github.com/Mercotui/terminal-bridgebuilder"
repository = "https://github.com/Mercotui/terminal-bridgebuilder"
keywords = ["terminal", "game", "bridgebuilder"]
categories = ["games"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0"
tui = "0.19"
crossterm = "0.27"
json = "0.12.4"
signal-hook = "0.3.17"
euclid = "0.22.9"
iterwindows = "0.3.0"
